# PCA

./: MANIFEST.in  PCA.py  README.md  pyproject.toml  setup.py
pca/: PCA.py  concepts.py  hypergraph.py  shd.py
src/: PCA.py  concepts.py  hypergraph.py  testHypergraph.py
src/pca/: PCA.py  concepts.py  hypergraph.py
test/: testConcepts.py  testHypergraph.py  testPCA.py  testShd.py
